agregado de sass

--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -22,14 +22,16 @@
 <hr>
     <h1>¿DONDE ESTÁMOS?</h1>
     <section class="fondo_ubi">
-        <p class="textoubi1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. onsectetur adipisicing elit. <br>
-        corrupti expedita aliquid repudiandae voluptatibus provident, m </p>
         <h5> NOS SEGUIMOS EXPANDIENDO...</h5> 
+        <div class="textoubi1"> Comenzamos en el barrio de Parque Chacabuco CABA, donde actualmente rige nuestra sede central. 
+        De a poco fuimos creciendo y expandiendonos abriendo dos locales mas en la zona de Caballito y luego en Villa del Parque.
+        Proximamente abriremos dos locales mas, en la localidad de San Isidro y en San Martín. La expansión no para.</div>
+        
         <div class="textoubi2"> <img src="../photos/location.png" alt="ubicacion"> Zelarrayán 1740 <br>
-        <img src="../photos/location.png" alt="ubicacion"> Rosario 472 <br>
-        <img src="../photos/location.png" alt="ubicacion"> Nazca 2785 <br>
-        <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div>
-        <div class="fotoubi1"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" width="500" height="350"> </div></iframe>
+            <img src="../photos/location.png" alt="ubicacion"> Rosario 472 <br>
+                <img src="../photos/location.png" alt="ubicacion"> Nazca 2785 <br>
+                    <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div>
+        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" width="450" height="350"> </div></iframe>
     </section>
 
 <footer> 
