--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina web dedicada al rubro de la tecnologia. Reparación de equipos, venta de insumos
+    instalación de camaras de seguridad, mantenimiento general, actualización de gps. Todo esto ofrecemos en TECH912">
+    <meta name="keywords"  content="TECH, PC, COMPUTADORA, NOTEBOOK, SERVICIO TECNICO, INFORMATICA, REDES">
     <title>Inicio</title>
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
@@ -44,7 +47,7 @@
         </div>
     </section>
 
-    <section class="fondo">
+    <section class="fondoweb">
         <div class="grid-container">
             <div class="grid-item">LOCAL AL PÚBLICO</div>
             <div class="grid-item">VISITAS A DOMICILIO</div>
