--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <div class="fotologo"><img src="photos/fotologo.png" alt="fotologo" id="fotologo"></div>
-    <section>
-        <div class="menu">
-            <a href="index.html">INICIO</a>
-            <a href="pages/Servicios.html">SERVICIOS</a>
-            <a href="pages/Nosotros.html">NOSOTROS</a>
-            <a href="pages/Ubicación.html">UBICACIÓN</a>
-            <a href="pages/Contacto.html">CONTACTO</a>
-        </div> 
-    </section> 
+        <nav>
+            <div class="menu">
+                <a href="index.html">INICIO</a>
+                <a href="pages/Servicios.html">SERVICIOS</a>
+                <a href="pages/Nosotros.html">NOSOTROS</a>
+                <a href="pages/Ubicación.html">UBICACIÓN</a>
+                <a href="pages/Contacto.html">CONTACTO</a>
+            </div>
+        </nav> 
 <hr>
 <h1>SOMOS TECH912 </h1>
     <section class="index1"> 
@@ -43,7 +43,7 @@
                 </div>
             </ul>
         </div>
-            <div class="fondo_foto1"><img src="../PROYECTO/photos/tecnicos_pc.jpg" width="100%" height="100%" alt="index1">
+            <div class="fondo_foto1"><img src="photos/tecnicos_pc.jpg" width="100%" height="100%" alt="index1">
         </div>
     </section>
 
@@ -54,7 +54,6 @@
             <div class="grid-item">PRESUPUESTO SIN CARGO</div>  
         </div>
     </section>
-
     <footer> 
         <br><br>
         <div class="copyright">© Copyright 2022 | <a href="index.html" class="irarriba" >Ir arriba ↑</a></div> 
