--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
+    <nav>
     <div class="menu">
         <a href="../index.html">INICIO</a>
         <a href="Servicios.html">SERVICIOS</a>
@@ -19,6 +20,7 @@
         <a href="Ubicación.html">UBICACIÓN</a>
         <a href="Contacto.html">CONTACTO</a>
     </div>
+</nav>
     <hr>
     <h1>LÍDERES EN EL MERCADO</h1>
     <section class="nosotros1">
