--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
-    <section> 
-        <article class="menu">
+    <nav> 
+        <div class="menu">
             <a href="../index.html">INICIO</a>
             <a href="Servicios.html">SERVICIOS</a>
             <a href="Nosotros.html">NOSOTROS</a>
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
-        </article>
-    </section>
+        </div>
+    </nav> 
 <hr>
     <h1>¿DONDE ESTÁMOS?</h1>
     <section class="fondo_ubi">
