estilos agregados en ubicación

--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <head id="index.html"></head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada al rubro de la tecnologia. Reparación de equipos, venta de insumos
     instalación de camaras de seguridad, mantenimiento general, actualización de gps. Todo esto ofrecemos en TECH912">
-    <meta name="keywords"  content="TECH, PC, COMPUTADORA, NOTEBOOK, SERVICIO TECNICO, INFORMATICA, REDES">
+    <meta name="keywords" content="TECH, PC, COMPUTADORA, NOTEBOOK, SERVICIO TECNICO, INFORMATICA, REDES">
     <title>Inicio</title>
     <link rel="stylesheet" href="estilo/estilo.css">
 </head>
+
 <body>
     <div class="fotologo"><img src="photos/fotologo.png" alt="fotologo" id="fotologo"></div>
-        <nav>
-            <div class="menu">
-                <a href="index.html">INICIO</a>
-                <a href="pages/Servicios.html">SERVICIOS</a>
-                <a href="pages/Nosotros.html">NOSOTROS</a>
-                <a href="pages/Ubicación.html">UBICACIÓN</a>
-                <a href="pages/Contacto.html">CONTACTO</a>
-            </div>
-        </nav> 
-<hr>
-<h1>SOMOS TECH912 </h1>
-    <section class="index1"> 
+    <nav>
+        <div class="menu">
+            <a href="index.html">INICIO</a>
+            <a href="pages/Servicios.html">SERVICIOS</a>
+            <a href="pages/Nosotros.html">NOSOTROS</a>
+            <a href="pages/Ubicación.html">UBICACIÓN</a>
+            <a href="pages/Contacto.html">CONTACTO</a>
+        </div>
+    </nav>
+    <hr>
+    <h1>SOMOS TECH912 </h1>
+    <section class="index1">
         <h2>REALIZAMOS TODO TIPO DE SERVICIOS <br>
-            A PARTICULARES Y A EMPRESAS</h2> <hr>
-                <div class="primertexto__parrafo">Somos <strong>TECH912</strong>, nos distinguimos en el sector
-                    por contar con una amplia trayectoria en el rubro de venta y reparación de PC y notebooks.
-                    Tambien ofrecemos una gran cantidad de servicios que nos convierte en una de las empresas
-                    mas buscadas, tanto por clientes particulares como empresas.
-                    Nos caracterizamos por la calidad y el profesionalismo con el que desarrollamos nuestras actividades.
-                    </div>
-                <br><hr><br>
-                <div class="lista_index"> 
+            A PARTICULARES Y A EMPRESAS</h2>
+        <hr>
+        <div class="primertexto__parrafo">Somos <strong>TECH912</strong>, nos distinguimos en el sector
+            por contar con una amplia trayectoria en el rubro de venta y reparación de PC y notebooks.
+            Tambien ofrecemos una gran cantidad de servicios que nos convierte en una de las empresas
+            mas buscadas, tanto por clientes particulares como empresas.
+            Nos caracterizamos por la calidad y el profesionalismo con el que desarrollamos nuestras actividades.
+        </div>
+        <br>
+        <hr><br>
+        <div class="lista_index">
             <ul class="listas_index">
-                <div class="lista_index--div"> 
-                    <div class="list1"><li> LOCAL AL PÚBLICO </li></div>
-                    <div class="list2"><li> VISITAS A DOMICILIO</li></div>
-                    <div class="list3"><li> PRESUPUESTO SIN CARGO</li></div>
+                <div class="lista_index--div">
+                    <div class="list1">
+                        <li> LOCAL AL PÚBLICO </li>
+                    </div>
+                    <div class="list2">
+                        <li> VISITAS A DOMICILIO</li>
+                    </div>
+                    <div class="list3">
+                        <li> PRESUPUESTO SIN CARGO</li>
+                    </div>
                 </div>
             </ul>
         </div>
-            <div class="fondo_foto1"><img src="photos/tecnicos_pc.jpg" width="100%" height="100%" alt="index1">
+        <div class="fondo_foto1"><img src="photos/tecnicos_pc.jpg" width="100%" height="100%" alt="index1">
         </div>
     </section>
 
@@ -51,12 +62,18 @@
         <div class="grid-container">
             <div class="grid-item">LOCAL AL PÚBLICO</div>
             <div class="grid-item">VISITAS A DOMICILIO</div>
-            <div class="grid-item">PRESUPUESTO SIN CARGO</div>  
+            <div class="grid-item">PRESUPUESTO SIN CARGO</div>
         </div>
     </section>
-    <footer> 
+    <footer>
         <br><br>
-        <div class="copyright">© Copyright 2022 | <a href="index.html" class="irarriba" >Ir arriba ↑</a></div> 
-        <p class="lasttext">TODOS LOS DERECHOS RESERVADOS</p> </footer>
-        </body>
-        </html>
+        <div class="copyright">© Copyright 2022 | <a href="index.html" class="irarriba">Ir arriba ↑</a>
+        </div>
+        <div class="fondo_lasttext">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+            </div>
+        </div>
+    </footer>
+</body>
+
+</html>
