--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -17,7 +17,7 @@
             <a href="Nosotros.html">NOSOTROS</a>
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
-        </article>
+        </div>
     </nav>
 <hr>
 <h1>CONTACTANOS</h1> 
@@ -53,6 +53,9 @@
 <footer> 
     <br><br>
     <div class="copyright">© Copyright 2022 | <a href="Contacto.html" class="irarriba" >Ir arriba ↑</a></div> 
-    <p class="lasttext">TODOS LOS DERECHOS RESERVADOS</p> </footer>
+    <div class="fondo_lasttext">
+        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+        </div>
+    </div></footer>
     </body>
     </html
