--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -34,7 +34,10 @@
 
     <footer>
         <div class="copyright">© Copyright 2022 | <a href="Nosotros.html" class="irarriba">Ir arriba ↑</a></div>
-        <p class="lasttext">TODOS LOS DERECHOS RESERVADOS</p>
+        <div class="fondo_lasttext">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+            </div>
+        </div>
     </footer>
 </body>
 
