--- a/pages/Servicios.html
+++ b/pages/Servicios.html
@@ -12,11 +12,11 @@
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
     <nav>
         <div class="menu">
-        <a href="../index.html">INICIO</a>
-        <a href="Servicios.html">SERVICIOS</a>
-        <a href="Nosotros.html">NOSOTROS</a>
-        <a href="Ubicación.html">UBICACIÓN</a>
-        <a href="Contacto.html">CONTACTO</a>
+            <a href="../index.html">INICIO</a>
+            <a href="Servicios.html">SERVICIOS</a>
+            <a href="Nosotros.html">NOSOTROS</a>
+            <a href="Ubicación.html">UBICACIÓN</a>
+            <a href="Contacto.html">CONTACTO</a>
         </div>
     </nav> 
 <hr>
@@ -66,6 +66,9 @@
 <footer> 
     <br><br>
     <div class="copyright">© Copyright 2022 | <a href="Servicios.html" class="irarriba" >Ir arriba ↑</a></div> 
-    <p class="lasttext">TODOS LOS DERECHOS RESERVADOS</p> </footer>
+    <div class="fondo_lasttext">
+        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+        </div>
+    </div></footer>
     </body>
     </html>
