--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -22,21 +22,25 @@
 <hr>
     <h1>¿DONDE ESTÁMOS?</h1>
     <section class="fondo_ubi">
-        <h5> NOS SEGUIMOS EXPANDIENDO...</h5> 
+        <h5> NOS SEGUIMOS EXPANDIENDO...</h5> <hr>
         <div class="textoubi1"> Comenzamos en el barrio de Parque Chacabuco CABA, donde actualmente rige nuestra sede central. 
         De a poco fuimos creciendo y expandiendonos abriendo dos locales mas en la zona de Caballito y luego en Villa del Parque.
-        Proximamente abriremos dos locales mas, en la localidad de San Isidro y en San Martín. La expansión no para.</div>
+        Proximamente abriremos dos locales mas, en la localidad de San Isidro y en San Martín. La expansión no para.</div> <hr>
         
-        <div class="textoubi2"> <img src="../photos/location.png" alt="ubicacion"> Zelarrayán 1740 <br>
-            <img src="../photos/location.png" alt="ubicacion"> Rosario 472 <br>
-                <img src="../photos/location.png" alt="ubicacion"> Nazca 2785 <br>
-                    <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div>
-        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe" width="450" height="350"> </div></iframe>
+        <div class="textoubi2"> 
+            <a href="https://www.google.com/maps?q=Zelarray%C3%A1n+1740,+C1406IJF+CABA&ftid=0x95bccbb7d7f9198b:0x3baa1420e0deac22" target="_blank"><img src="../photos/location.png" class="ubi1" alt="ubicacion1"></a> Zelarrayán 1740 <br>
+            <a href="https://www.google.com/maps/dir//-34.6190418,-58.4337618" target="_blank"><img src="../photos/location.png" class="ubi2" alt="ubicacion2"></a> Rosario 472 <br>
+            <a href="https://www.google.com/maps/dir//-34.6037806,-58.4878306/@-34.6041511,-58.5576121,12z" target="_blank"><img src="../photos/location.png" class="ubi3"  alt="ubicacion3"></a> Nazca 2785 <br>
+                    <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div> 
+        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe" width="450" height="350"> </div></iframe> 
     </section>
 
 <footer> 
     <br><br>
     <div class="copyright">© Copyright 2022 | <a href="Ubicación.html" class="irarriba" >Ir arriba ↑</a></div> 
-    <p class="lasttext">TODOS LOS DERECHOS RESERVADOS</p> </footer>
+    <div class="fondo_lasttext">
+        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+        </div>
+    </div></footer>
     </body>
     </html
