agregado de estilos a ubicaciones y footer

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -33,11 +33,18 @@
     </section> <br> <br>
 
     <footer>
-        <div class="copyright">© Copyright 2022 | <a href="Nosotros.html" class="irarriba">Ir arriba ↑</a></div>
+        <div class="fondo_copyright">
+            <div class="term"><a href="pages/Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="pages/Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="index.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
+        </div>
         <div class="fondo_lasttext">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
-            </div>
+                </div>
+            <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
+    
     </footer>
 </body>
 
