--- a/index.html
+++ b/index.html
@@ -66,13 +66,18 @@
         </div>
     </section>
     <footer>
-        <br><br>
-        <div class="copyright">© Copyright 2022 | <a href="index.html" class="irarriba">Ir arriba ↑</a>
+        <div class="fondo_copyright">
+            <div class="term"><a href="pages/Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="pages/Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="index.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
         </div>
         <div class="fondo_lasttext">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
-            </div>
+                </div>
+            <div class="logosmall"><a href="index.html"><img src="photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
+
     </footer>
 </body>
 
