--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -32,15 +32,21 @@
             <a href="https://www.google.com/maps/dir//-34.6190418,-58.4337618" target="_blank"><img src="../photos/location.png" class="ubi2" alt="ubicacion2"></a> Rosario 472 <br>
             <a href="https://www.google.com/maps/dir//-34.6037806,-58.4878306/@-34.6041511,-58.5576121,12z" target="_blank"><img src="../photos/location.png" class="ubi3"  alt="ubicacion3"></a> Nazca 2785 <br>
                     <img src="../photos/clock.png" alt="reloj"><italic> HORARIO DE ATENCIÓN: 9:00 A 19:00</italic></div> 
-        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe" width="450" height="350"> </div></iframe> 
+        <div class="map"><iframe src="https://www.google.com/maps/d/embed?mid=1QDuGzQTNLCnnQ9wrXSv2rGSnm_FZOUQ&ehbc=2E312F" id="iframe" width="450" height="350"> </div></iframe> <hr>
     </section>
-
-<footer> 
-    <br><br>
-    <div class="copyright">© Copyright 2022 | <a href="Ubicación.html" class="irarriba" >Ir arriba ↑</a></div> 
-    <div class="fondo_lasttext">
-        <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+    <footer>
+        <div class="fondo_copyright">
+            <div class="term"><a href="pages/Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="pages/Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="index.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
         </div>
-    </div></footer>
+        <div class="fondo_lasttext">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+                </div>
+            <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
+        </div>
+    
+    </footer>
     </body>
     </html
