agrego bootstrap en 2 secciones y estilo en nosotros.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>REALIZAMOS TODO TIPO DE SERVICIOS <br>
             A PARTICULARES Y A EMPRESAS</h2>
         <hr>
-        <div class="primertexto__parrafo">Somos <strong>TECH912</strong>, nos distinguimos en el sector
+        <div class="primertexto__parrafo">Nos distinguimos en el sector
             por contar con una amplia trayectoria en el rubro de venta y reparación de PC y notebooks.
             Tambien ofrecemos una gran cantidad de servicios que nos convierte en una de las empresas
             mas buscadas, tanto por clientes particulares como empresas.
@@ -77,7 +77,6 @@
                 </div>
             <div class="logosmall"><a href="index.html"><img src="photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
-
     </footer>
 </body>
 
