--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <head id="Nosotros.html"></head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,38 +14,64 @@
 <body>
     <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo"></div>
     <nav>
-    <div class="menu">
-        <a href="../index.html">INICIO</a>
-        <a href="Servicios.html">SERVICIOS</a>
-        <a href="Nosotros.html">NOSOTROS</a>
-        <a href="Ubicación.html">UBICACIÓN</a>
-        <a href="Contacto.html">CONTACTO</a>
-    </div>
-</nav>
+        <div class="menu">
+            <a href="../index.html">INICIO</a>
+            <a href="Servicios.html">SERVICIOS</a>
+            <a href="Nosotros.html">NOSOTROS</a>
+            <a href="Ubicación.html">UBICACIÓN</a>
+            <a href="Contacto.html">CONTACTO</a>
+        </div>
+    </nav>
     <hr>
     <h1>LÍDERES EN EL MERCADO</h1>
     <section class="nosotros1">
-        <h3>¿POR QUÉ ELEGIRNOS?</h3> <hr>
-        <div class="nosotros1_parrafo"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis iusto
-            dolores quis sunt.
-            Sit consectetur libero dolorem eaque architecto doloremque aspernatur necessitatibus.
-            Aut aspernatur ad cumque placeat eaque repellendus eligendi. </div> <br><hr> 
-        <h3>¿QUIÉNES SÓMOS?</h3>
-    </section> <br> <br>
+        <h3>¿QUIÉNES SÓMOS? </h3>
+        <hr>
+        <div class="nosotros1_parrafo"> Somos <strong>TECH912</strong>, una empresa de servicio técnico </div> <br>
+        <hr>
+        <h3>¿POR QUÉ ELEGIRNOS?</h3>
+        <div class="nosotros1_parrafo_dos"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati magni
+            architecto dolores voluptate nemo tenetur nulla, distinctio repellendus inventore, laboriosam adipisci quam
+            fugit quos similique expedita molestiae unde porro optio.</div>
+    </section>
+
+    <div class="nosotros2">
+        <div class="caja"> 
+            <img src="../photos/it.png" alt="">
+            <h4>Servicio técnico a domicilio</h4>
+            <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
+                architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
+                itaque at modi.</p></div>
+        </div>
+    <div class="caja"> 
+        <img src="../photos/local.png" alt=""> 
+        <h4>Local al público</h4>
+        <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
+            architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
+            itaque at modi.</p></div>
+    </div>
+    <div class="caja"> 
+        <img src="../photos/cash.png" alt="">
+        <h4>Presupuesto sin cargo</h4>
+        <div class="container_parrafo"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, voluptatem tenetur debitis, aperiam dolore
+            architecto dignissimos id minus officiis neque dolorum quaerat ratione eius quisquam corporis deserunt
+            itaque at modi.</p></div>
+    </div>
+</div>
 
     <footer>
         <div class="fondo_copyright">
-            <div class="term"><a href="pages/Term.html"> Terminos y condiciones </a></div>
-            <div class="politic"> <a href="pages/Politic.html"> Política de privacidad</a> </div>
-            <div class="irarriba"> <a href="index.html"> Ir arriba ↑</a></div>
+            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="Nosotros.html"> Ir arriba ↑</a></div>
             <div class="copyright">© Copyright 2022 |</div>
         </div>
         <div class="fondo_lasttext">
             <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
-                </div>
+            </div>
             <div class="logosmall"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a> </div>
         </div>
-    
+
     </footer>
 </body>
 
