--- a/pages/Politic.html
+++ b/pages/Politic.html
@@ -1,20 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <head id="Política de privacidad"></head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de privacidad</title>
     <link rel="stylesheet" href="../estilo/estilo.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
+
 <body>
-    <section>
-        <div>
-            Política de privacidad
+    <div class="fotologo"><img src="../photos/fotologo.png" alt="fotologo" id="fotologo"></div>
+    <nav>
+        <div class="menu">
+            <div class="container">
+                <div class="d-flex justify-content-between justify-content-sm-center">
+                    <div class="col-auto"><a class="align-self-center" href="../index.html">INICIO</a></div>
+                    <div class="col-auto"><a class="align-self-center" href="Servicios.html">SERVICIOS</a></div>
+                    <div class="col-auto"><a class="align-self-center" href="Nosotros.html">NOSOTROS</a></div>
+                    <div class="col-auto"><a class="align-self-center" href="Ubicación.html">UBICACIÓN</a></div>
+                    <div class="col-auto"><a class="align-self-center" href="Contacto.html">CONTACTO</a></div>
+                </div>
+            </div>
+    </nav>
+
+    <div class="index1 pb-3">
+        <h3 class="border-bottom border-light">
+            Política de privacidad</h3>
+        <div class="d-flex align-items-center ml-4 mr-4">El presente Política de Privacidad establece los términos en
+            que Tech912 usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su
+            sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos
+            llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando
+            que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad
+            puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente
+            esta página para asegurarse que está de acuerdo con dichos cambios. Tech912 Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier
+            momento.
         </div>
-            <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque saepe quam asperiores culpa voluptatem nulla omnis est nemo assumenda optio. Non doloribus beatae animi provident corporis at ab tempora impedit!
+    </div>
+    <footer>
+        <div class="fondo_copyright h-25">
+            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="Politic.html"> Ir arriba ↑</a></div>
+            <div class="copyright">© Copyright 2022 |</div>
         </div>
-    </section>
+        <div class="fondo_lasttext h-25">
+            <div class="text_lasttext">TODOS LOS DERECHOS RESERVADOS
+            </div>
+            <div class="logosmall mb-2"><a href="index.html"><img src="../photos/logosmall.png" alt="logofooter"> </a>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+
 </html>
