--- a/pages/Ubicación.html
+++ b/pages/Ubicación.html
@@ -36,9 +36,9 @@
     </section>
     <footer>
         <div class="fondo_copyright">
-            <div class="term"><a href="pages/Term.html"> Terminos y condiciones </a></div>
-            <div class="politic"> <a href="pages/Politic.html"> Política de privacidad</a> </div>
-            <div class="irarriba"> <a href="index.html"> Ir arriba ↑</a></div>
+            <div class="term"><a href="Term.html"> Terminos y condiciones </a></div>
+            <div class="politic"> <a href="Politic.html"> Política de privacidad</a> </div>
+            <div class="irarriba"> <a href="Ubicación.html"> Ir arriba ↑</a></div>
             <div class="copyright">© Copyright 2022 |</div>
         </div>
         <div class="fondo_lasttext">
